test/fail/verification-asserts.mo
assert:system true;
assert:1:async true;
assert:func true;
assert:return true;

// `invariant` is a keyword in verification mode only
assert:invariant true;
assert:loop:invariant true;